ibuilder/tests/not_compile/unknown_attribute3.stderr
error: unknown attribute
 --> $DIR/unknown_attribute3.rs:3:16
  |
3 |     #[ibuilder(wibble(monster))]
  |                ^^^^^^^^^^^^^^^

error: unknown attribute
 --> $DIR/unknown_attribute3.rs:8:12
  |
8 | #[ibuilder(wibble(monster))]
  |            ^^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute3.rs:14:12
   |
14 | #[ibuilder(wibble(monster))]
   |            ^^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute3.rs:21:16
   |
21 |     #[ibuilder(wibble(monster))]
   |                ^^^^^^^^^^^^^^^
